--- a/index.html
+++ b/index.html
@@ -1,103 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Memories</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Our Memories</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <h1>Our Memories</h1>
+  <header>
+    <h1 class="site-title">Our Memories</h1>
+  </header>
 
-    <div class="timeline">
-        <div class="timeline-line"></div>
+  <main class="timeline-wrap">
+    <div class="timeline-line" aria-hidden="true"></div>
 
-        <!-- Repeat for all 12 memories -->
-        <div class="timeline-item">
-            <div class="date">Sept 17</div>
-            <div class="memory" onclick="goToMemory('memory1.html')">
-                <img src="memory1_1.jpg" alt="Memory 1">
-            </div>
-        </div>
+    <div class="timeline" id="timeline">
+      <!-- 12 timeline items. Each has a preview image and a date (alternating top/bottom handled by CSS) -->
+      <!-- Make sure preview images exist at images/memoryX_preview.jpg -->
+      <div class="timeline-item top" data-target="memory1.html">
+        <div class="preview"><img src="images/memory1_preview.jpg" alt="CAS Concert preview"></div>
+        <div class="label">Sept. 17</div>
+      </div>
 
-        <div class="timeline-item">
-            <div class="date">Sept 21</div>
-            <div class="memory" onclick="goToMemory('memory2.html')">
-                <img src="memory2_1.jpg" alt="Memory 2">
-            </div>
-        </div>
+      <div class="timeline-item bottom" data-target="memory2.html">
+        <div class="label">Sept. 21</div>
+        <div class="preview"><img src="images/memory2_preview.jpg" alt="Homecoming preview"></div>
+      </div>
 
-        <div class="timeline-item">
-            <div class="date">Oct 14</div>
-            <div class="memory" onclick="goToMemory('memory3.html')">
-                <img src="memory3_1.jpg" alt="Memory 3">
-            </div>
-        </div>
+      <div class="timeline-item top" data-target="memory3.html">
+        <div class="preview"><img src="images/memory3_preview.jpg" alt="Canyon Lake preview"></div>
+        <div class="label">Oct. 14</div>
+      </div>
 
-        <div class="timeline-item">
-            <div class="date">Oct 29</div>
-            <div class="memory" onclick="goToMemory('memory4.html')">
-                <img src="memory4_1.jpg" alt="Memory 4">
-            </div>
-        </div>
+      <div class="timeline-item bottom" data-target="memory4.html">
+        <div class="label">Nov. 24</div>
+        <div class="preview"><img src="images/memory4_preview.jpg" alt="Austin day preview"></div>
+      </div>
 
-        <div class="timeline-item">
-            <div class="date">Nov 18</div>
-            <div class="memory" onclick="goToMemory('memory5.html')">
-                <img src="memory5_1.jpg" alt="Memory 5">
-            </div>
-        </div>
+      <div class="timeline-item top" data-target="memory5.html">
+        <div class="preview"><img src="images/memory5_preview.jpg" alt="Ice Skating preview"></div>
+        <div class="label">Dec. 26</div>
+      </div>
 
-        <div class="timeline-item">
-            <div class="date">Dec 2</div>
-            <div class="memory" onclick="goToMemory('memory6.html')">
-                <img src="memory6_1.jpg" alt="Memory 6">
-            </div>
-        </div>
+      <div class="timeline-item bottom" data-target="memory6.html">
+        <div class="label">Jan–May</div>
+        <div class="preview"><img src="images/memory6_preview.jpg" alt="Facetimes preview"></div>
+      </div>
 
-        <div class="timeline-item">
-            <div class="date">Dec 22</div>
-            <div class="memory" onclick="goToMemory('memory7.html')">
-                <img src="memory7_1.jpg" alt="Memory 7">
-            </div>
-        </div>
+      <div class="timeline-item top" data-target="memory7.html">
+        <div class="preview"><img src="images/memory7_preview.jpg" alt="We started dating preview"></div>
+        <div class="label">May 18</div>
+      </div>
 
-        <div class="timeline-item">
-            <div class="date">Jan 13</div>
-            <div class="memory" onclick="goToMemory('memory8.html')">
-                <img src="memory8_1.jpg" alt="Memory 8">
-            </div>
-        </div>
+      <div class="timeline-item bottom" data-target="memory8.html">
+        <div class="label">May 31–Jun 1</div>
+        <div class="preview"><img src="images/memory8_preview.jpg" alt="Family beach preview"></div>
+      </div>
 
-        <div class="timeline-item">
-            <div class="date">Mar 5</div>
-            <div class="memory" onclick="goToMemory('memory9.html')">
-                <img src="memory9_1.jpg" alt="Memory 9">
-            </div>
-        </div>
+      <div class="timeline-item top" data-target="memory9.html">
+        <div class="preview"><img src="images/memory9_preview.jpg" alt="1 month anniversary preview"></div>
+        <div class="label">Jun. 21</div>
+      </div>
 
-        <div class="timeline-item">
-            <div class="date">Apr 10</div>
-            <div class="memory" onclick="goToMemory('memory10.html')">
-                <img src="memory10_1.jpg" alt="Memory 10">
-            </div>
-        </div>
+      <div class="timeline-item bottom" data-target="memory10.html">
+        <div class="label">Jul. 17</div>
+        <div class="preview"><img src="images/memory10_preview.jpg" alt="Birthday trip preview"></div>
+      </div>
 
-        <div class="timeline-item">
-            <div class="date">Jun 18</div>
-            <div class="memory" onclick="goToMemory('memory11.html')">
-                <img src="memory11_1.jpg" alt="Memory 11">
-            </div>
-        </div>
+      <div class="timeline-item top" data-target="memory11.html">
+        <div class="preview"><img src="images/memory11_preview.jpg" alt="Beach trip preview"></div>
+        <div class="label">Aug. 4</div>
+      </div>
 
-        <div class="timeline-item">
-            <div class="date">Aug 4</div>
-            <div class="memory" onclick="goToMemory('memory12.html')">
-                <img src="memory12_1.jpg" alt="Memory 12">
-            </div>
-        </div>
+      <div class="timeline-item bottom" data-target="memory12.html">
+        <div class="label">Aug. 18</div>
+        <div class="preview"><img src="images/memory12_preview.jpg" alt="3 month anniversary preview"></div>
+      </div>
     </div>
+  </main>
 
-    <script src="script.js"></script>
+  <!-- floating decorative sprites (use your own small pngs) -->
+  <div id="sprite-layer" aria-hidden="true"></div>
+
+  <!-- full-page white overlay used for fade transitions -->
+  <div id="fade-overlay" aria-hidden="true"></div>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
