--- a/memory12.html
+++ b/memory12.html
@@ -10,8 +10,8 @@
   <div class="memory-header">
     <h2 class="memory-title">Our 3 Month Anniversary!!</h2>
     <div class="controls">
-      <button class="btn btn-play">▶ Play / Pause</button>
-      <button class="btn btn-return">← Return to Timeline</button>
+     <button class="btn" onclick="goHome()">Back</button>
+      <button class="btn" onclick="toggleMusic()">🎵</button>
     </div>
   </div>
 
