--- a/memory2.html
+++ b/memory2.html
@@ -8,7 +8,7 @@
 </head>
 <body class="memory-page">
   <div class="memory-header">
-    <h2 class="memory-title">Memory 2</h2>
+    <h2 class="memory-title">Homecoming</h2>
     <div class="controls">
       <button class="btn" onclick="goHome()">Back</button>
       <button class="btn" onclick="toggleMusic()">🎵</button>
