--- a/memory1.html
+++ b/memory1.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Memory 1</title>
+  <title>CAS Concert</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="memory-page">
   <div class="memory-header">
-    <h2 class="memory-title">Memory 1</h2>
+    <h2 class="memory-title">CAS Concert</h2>
     <div class="controls">
       <button class="btn" onclick="goHome()">Back</button>
       <button class="btn" onclick="toggleMusic()">🎵</button>
