--- a/index.html
+++ b/index.html
@@ -14,51 +14,51 @@
     <div class="timeline-line"></div>
     <div class="timeline">
       <div class="timeline-item top" onclick="openMemory(1)">
-        <div class="preview"><img src="images/memory1_1.jpg" alt="Preview"></div>
+        <div class="preview"><img src="images/memory1_preview.jpg" alt="Preview"></div>
         <div class="label">Sept 17</div>
       </div>
       <div class="timeline-item bottom" onclick="openMemory(2)">
-        <div class="preview"><img src="images/memory2_1.jpg" alt="Preview"></div>
+        <div class="preview"><img src="images/memory2_preview.jpg" alt="Preview"></div>
         <div class="label">Sept 21</div>
       </div>
       <div class="timeline-item top" onclick="openMemory(3)">
-        <div class="preview"><img src="images/memory3_1.jpg" alt="Preview"></div>
+        <div class="preview"><img src="images/memory3_preview.jpg" alt="Preview"></div>
         <div class="label">Oct 14</div>
       </div>
       <div class="timeline-item bottom" onclick="openMemory(4)">
-        <div class="preview"><img src="images/memory4_1.jpg" alt="Preview"></div>
+        <div class="preview"><img src="images/memory4_preview.jpg" alt="Preview"></div>
         <div class="label">Oct 28</div>
       </div>
       <div class="timeline-item top" onclick="openMemory(5)">
-        <div class="preview"><img src="images/memory5_1.jpg" alt="Preview"></div>
+        <div class="preview"><img src="images/memory5_preview.jpg" alt="Preview"></div>
         <div class="label">Nov 11</div>
       </div>
       <div class="timeline-item bottom" onclick="openMemory(6)">
-        <div class="preview"><img src="images/memory6_1.jpg" alt="Preview"></div>
+        <div class="preview"><img src="images/memory6_preview.jpg" alt="Preview"></div>
         <div class="label">Dec 2</div>
       </div>
       <div class="timeline-item top" onclick="openMemory(7)">
-        <div class="preview"><img src="images/memory7_1.jpg" alt="Preview"></div>
+        <div class="preview"><img src="images/memory7_preview.jpg" alt="Preview"></div>
         <div class="label">Dec 25</div>
       </div>
       <div class="timeline-item bottom" onclick="openMemory(8)">
-        <div class="preview"><img src="images/memory8_1.jpg" alt="Preview"></div>
+        <div class="preview"><img src="images/memory8_preview.jpg" alt="Preview"></div>
         <div class="label">Jan 15</div>
       </div>
       <div class="timeline-item top" onclick="openMemory(9)">
-        <div class="preview"><img src="images/memory9_1.jpg" alt="Preview"></div>
+        <div class="preview"><img src="images/memory9_preview.jpg" alt="Preview"></div>
         <div class="label">Feb 14</div>
       </div>
       <div class="timeline-item bottom" onclick="openMemory(10)">
-        <div class="preview"><img src="images/memory10_1.jpg" alt="Preview"></div>
+        <div class="preview"><img src="images/memory10_preview.jpg" alt="Preview"></div>
         <div class="label">Mar 10</div>
       </div>
       <div class="timeline-item top" onclick="openMemory(11)">
-        <div class="preview"><img src="images/memory11_1.jpg" alt="Preview"></div>
+        <div class="preview"><img src="images/memory11_preview.jpg" alt="Preview"></div>
         <div class="label">Jul 20</div>
       </div>
       <div class="timeline-item bottom" onclick="openMemory(12)">
-        <div class="preview"><img src="images/memory12_1.jpg" alt="Preview"></div>
+        <div class="preview"><img src="images/memory12_preview.jpg" alt="Preview"></div>
         <div class="label">Aug 4</div>
       </div>
     </div>
